--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
             </article>                        
         </section>
     </main>
-    <footer class="centrum">&copy;j4rl 2025</footer>
+    <footer class="centrum">&copy;j4rl & Sniperking 2025</footer>
 </body>
 </html>
